add GET: assignments
