# backend/src/schema.rs
@@ -1,4 +1,14 @@
 table! {
+    assignments (id) {
+        id -> Integer,
+        role_id -> Integer,
+        start_at -> Date,
+        end_at -> Date,
+        member_id -> Integer,
+    }
+}
+
+table! {
     members (id) {
         id -> Integer,
         name -> Varchar,
@@ -14,6 +24,7 @@ table! {
 }
 
 allow_tables_to_appear_in_same_query!(
+    assignments,
     members,
     roles,
 );
